# octavia

./: Cargo.toml  README.md  default_registry.json  default_tags.json
src/: connection.rs  error.rs  main.rs  server.rs
src/packet/: reader.rs
src/registry/: entry.rs  manager.rs  mod.rs
src/tag/: mod.rs
