[package]
name = "octavia"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

serde_json = "1.0"
bytes = "1"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.210", features = ["derive"] }
async-trait = "0.1.83"
